fixed form spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,7 @@ form{
 }
 
 .inputWrapper{
-    margin: 8px;
+    margin: 8px 0;
 }
 
 .inputWrapper input{
